--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,16 @@
-spring.datasource.url = jdbc:mysql://mysql-standalone-container:3306/test?useSSL=false
-spring.datasource.username = testuser
-spring.datasource.password = testuser@123
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Local run configuration
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/imagestorage
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#server.port=8080
 
-
-## Hibernate Properties
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-# Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = create
-
-spring.jpa.generate-ddl=true
+#Docker image configuration
+spring.datasource.url=jdbc:mysql://mysqldb:3306/imagestore
+spring.datasource.username=sa
+spring.datasource.password=1234
 spring.jpa.show-sql=true
-
-# HikaryCP Properties
-spring.datasource.hikari.initialization-fail-timeout=0
-
-server.port=8084
+spring.jpa.hibernate.ddl-auto=update
